--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div align="center" class="maindiv">
              <div class="imageblock" bgcolor="#FFFFFF" style="color: #336699">
                 <div class="image"> <a href="http://www.svnit.ac.in" target="_blank">
-                    <img id="logo" name="logo" border="0" src="uploadedwebclientlogo.jpg">
+                    <img id="logo" name="logo" border="0" src="svnit.jpg">
                 </a>
 </div>
 <div class="headerclass" id="loginboxtitle" style="background-color:#FFFFFF;color: #336699;">
