--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
     
 <div class="headerdiv">
     <table width="100%" cellspacing="0" cellpadding="0">
-        <tbody><tr><td height="50px;" style="color:#565656" align="center" valign="middle">Central Computer Centre</td>
-        </tr></tbody></table></div><script language="JavaScript">loginValue = 'Login';logoutValue = 'Logout';setHREF();</script><div id="arrivedMsgDiv" style="display:none">
-        </div></form><script language="Javascript">document.forms[0].password.setAttribute("maxLength",60);</script></body></html>
+        <tbody>
+            <tr>
+                <td height="50px;" style="color:#565656" align="center" valign="middle">Central Computer Centre</td>
+        </tr>
+        </tbody>
+    </table>
+        </div>
+        <div id="arrivedMsgDiv" style="display:none">
+        </div>
+        </form>
+    </body>
+</html>
